--- a/css/styles.css
+++ b/css/styles.css
@@ -551,3 +551,29 @@ body {
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+
+.project-card-cover {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-card-cover-text {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  padding: 40px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+  color: var(--cloud);
+  background-color: var(--iris);
+  transform: translateY(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.project-card:hover .project-card-cover-text {
+  transform: translate(0);
+}
