--- a/css/styles.css
+++ b/css/styles.css
@@ -571,7 +571,7 @@ body {
   color: var(--cloud);
   background-color: var(--iris);
   transform: translateY(100%);
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-card:hover .project-card-cover-text {
