--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
   --cloud: #f4f4fd;
   --green: #31d0a3;
   --lightslate: #8e8f99;
+  --dairy: #fcfcfc
 }
 
 h1,
@@ -127,6 +128,7 @@ body {
   display: block;
   padding-top: 32px;
   padding-bottom: 31px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-menu .contact {
@@ -281,6 +283,7 @@ body {
   border-radius: 50%;
   background-color: var(--iris);
   color: var(--cloud);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-item {
@@ -304,7 +307,7 @@ body {
   fill: currentColor;
 }
 
-.social-link {
+/*.social-link {
   width: 40px;
   height: 40px;
   display: flex;
@@ -312,13 +315,14 @@ body {
   justify-content: center;
   border-radius: 100%;
   background-color: var(--iris);
+
 }
 
 .social-link:hover,
 .social-link:focus {
   background-color: var(--ocean);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+    0px 2px 2px rgba(0, 0, 0, 0.12);*/
 }
 
 .substrate {
@@ -424,6 +428,7 @@ body {
   letter-spacing: 0.06em;
   font-weight: 500;
   padding: 16px 32px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.primary:hover,
@@ -440,6 +445,8 @@ body {
   line-height: 1.62;
   font-weight: 500;
   padding: 6px 22px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.filter:hover,
@@ -511,6 +518,8 @@ body {
   justify-content: center;
   align-items: center;
   color: var(--lightslate);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .partners .icon {
@@ -544,6 +553,7 @@ body {
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-top: 30px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-card:hover {
@@ -576,4 +586,64 @@ body {
 
 .project-card:hover .project-card-cover-text {
   transform: translate(0);
+}
+
+/* MODAL Window */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 408px;
+  min-height: 584px;
+  background-color: var(--dairy);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+
+.modal-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  background-color: var(--dairy);
+  color: var(--navyblue);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-icon {
+  fill: currentColor;
+}
+
+.modal-close:hover, .modal-close:focus {
+  color: var(--ocean);
+}
+
+.is-hidden {
+  visibility: none;
+  opacity: 0;
+  pointer-events: none;
 }
