--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,23 @@ body {
   align-items: center;
 }
 
+.page.current {
+  position: relative;
+  color: var(--ocean)
+}
+
+.page.current::after {
+  content:"";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  border: 2px solid var(--ocean);
+  background-color: var(--ocean);
+}
+
 .logo-link {
   font-family: "Raleway", sans-serif;
   font-size: 0;
@@ -639,7 +656,8 @@ body {
 }
 
 .modal-close:hover, .modal-close:focus {
-  color: var(--ocean);
+  background-color: var(--ocean);
+  color: var(--dairy);
 }
 
 .is-hidden {
