--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   --cloud: #f4f4fd;
   --green: #31d0a3;
   --lightslate: #8e8f99;
-  --dairy: #fcfcfc
+  --dairy: #fcfcfc;
 }
 
 h1,
@@ -76,11 +76,11 @@ body {
 
 .page.current {
   position: relative;
-  color: var(--ocean)
+  color: var(--ocean);
 }
 
 .page.current::after {
-  content:"";
+  content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -300,7 +300,8 @@ body {
   border-radius: 50%;
   background-color: var(--iris);
   color: var(--cloud);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-item {
@@ -322,24 +323,6 @@ body {
   width: 16px;
   height: 16px;
   fill: currentColor;
-}
-
-/*.social-link {
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 100%;
-  background-color: var(--iris);
-
-}
-
-.social-link:hover,
-.social-link:focus {
-  background-color: var(--ocean);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);*/
 }
 
 .substrate {
@@ -624,6 +607,7 @@ body {
   left: 50%;
   min-width: 408px;
   min-height: 584px;
+  border-radius: 4px;
   background-color: var(--dairy);
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -635,14 +619,14 @@ body {
 
 .modal-close {
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: 24px;
+  right: 24px;
   padding: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 30px;
-  height: 30px;
+  width: 24px;
+  height: 24px;
   background-color: var(--dairy);
   color: var(--navyblue);
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -655,7 +639,8 @@ body {
   fill: currentColor;
 }
 
-.modal-close:hover, .modal-close:focus {
+.modal-close:hover,
+.modal-close:focus {
   background-color: var(--ocean);
   color: var(--dairy);
 }
